--- a/src/responsive.css
+++ b/src/responsive.css
@@ -33,7 +33,6 @@
   }
 
   #skills {
-    margin-top: 150px;
     padding-top: 50px;
   }
 }
